LinkedList
Added doubly LinkedList,
stack and Queue improved

Collection renamed to List